gr8_parser.output
   0  $accept : program $end

   1  program : decl_chain

   2  decl_chain : decl
   3             | decl_chain decl
   4             |

   5  decl : var_decl
   6       | access func_type tIDENTIFIER uses
   7       | func_type tIDENTIFIER uses
   8       | tDEFINE decl_access func_type tIDENTIFIER func_params tAS blockStart

   9  var_decl : access type tIDENTIFIER initially
  10           | type tIDENTIFIER initially

  11  initially : tOPEN tINITIALLY expr tCLOSE
  12            |

  13  access : tPUBLIC
  14         | tUSE

  15  decl_access : tPUBLIC
  16              |

  17  func_type : type tFUNCTION
  18            | tPROCEDURE

  19  func_params : tON params
  20              |

  21  uses : tUSES params
  22       |

  23  params : variable
  24         | params tCOMMA variable

  25  variable : type tIDENTIFIER

  26  type : small
  27       | huge
  28       | news

  29  small : tSMALL
  30        | tSMALL small_chain

  31  small_chain : tSMALL small_chain
  32              | tFAKE

  33  huge : tHUGE
  34       | tHUGE huge_chain

  35  huge_chain : tHUGE huge_chain
  36             | tFAKE

  37  news : tFAKE news
  38       | tNEWS

  39  blockStart : tINSIDE var_chain list tOUTSIDE
  40             | tINSIDE var_chain tOUTSIDE
  41             | tINSIDE list tOUTSIDE

  42  var_chain : var_decl
  43            | var_chain var_decl

  44  list : inst
  45       | list inst

  46  inst : expr
  47       | tASSIGN expr tTO lval
  48       | tTWEET expr
  49       | tPOST expr
  50       | tAGAIN tINTEGER
  51       | tSTOP tINTEGER
  52       | tAGAIN
  53       | tSTOP
  54       | tRETURN expr
  55       | tIF expr tTHEN indent_list
  56       | tIF expr tTHEN indent_list tELSE indent_list
  57       | tIF expr tTHEN indent_list tELSIF elif
  58       | tSWEEPING lval tFROM expr tTO expr sweepBy tDO indent_list
  59       | tINPUT

  60  indent_list : tINSIDE list tOUTSIDE

  61  elif : expr tTHEN indent_list tELSIF elif
  62       | expr tTHEN indent_list
  63       | expr tTHEN indent_list tELSE indent_list

  64  sweepBy : tBY expr
  65          |

  66  expr_chain : expr
  67             | expr_chain tCOMMA expr

  68  lval : tIDENTIFIER
  69       | tCELL expr tAT lval
  70       | tCELL expr tAT tOPEN expr tCLOSE

  71  expr : tINTEGER
  72       | tDOUBLE
  73       | tNULL
  74       | str_chain
  75       | expr tBELOW expr
  76       | expr tABOVE expr
  77       | expr tEQUALS expr
  78       | expr tAND expr
  79       | expr tOR expr
  80       | expr tTIMES expr
  81       | expr tOVER expr
  82       | expr tMODULUS expr
  83       | expr tPLUS expr
  84       | expr tMINUS expr
  85       | tNOT expr
  86       | tPLUS expr
  87       | tMINUS expr
  88       | tOPEN expr tCLOSE
  89       | tUSE expr_chain tFOR tIDENTIFIER
  90       | tDO tIDENTIFIER
  91       | expr tOBJECTS
  92       | lval tADDRESS
  93       | lval

  94  str_chain : tSTRING
  95            | str_chain tSTRING

0: shift/reduce conflict (shift 1, reduce 4) on tSMALL
0: shift/reduce conflict (shift 2, reduce 4) on tHUGE
0: shift/reduce conflict (shift 3, reduce 4) on tNEWS
0: shift/reduce conflict (shift 4, reduce 4) on tFAKE
0: shift/reduce conflict (shift 5, reduce 4) on tUSE
0: shift/reduce conflict (shift 6, reduce 4) on tPUBLIC
0: shift/reduce conflict (shift 7, reduce 4) on tDEFINE
0: shift/reduce conflict (shift 8, reduce 4) on tPROCEDURE
state 0
	$accept : . program $end  (0)
	decl_chain : .  (4)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 4

	program  goto 9
	decl  goto 10
	decl_chain  goto 11
	type  goto 12
	small  goto 13
	huge  goto 14
	news  goto 15
	func_type  goto 16
	access  goto 17
	var_decl  goto 18


state 1
	small : tSMALL .  (29)
	small : tSMALL . small_chain  (30)

	tSMALL  shift 19
	tFAKE  shift 20
	tIDENTIFIER  reduce 29
	tFUNCTION  reduce 29

	small_chain  goto 21


state 2
	huge : tHUGE .  (33)
	huge : tHUGE . huge_chain  (34)

	tHUGE  shift 22
	tFAKE  shift 23
	tIDENTIFIER  reduce 33
	tFUNCTION  reduce 33

	huge_chain  goto 24


state 3
	news : tNEWS .  (38)

	.  reduce 38


state 4
	news : tFAKE . news  (37)

	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	news  goto 25


state 5
	access : tUSE .  (14)

	.  reduce 14


state 6
	access : tPUBLIC .  (13)

	.  reduce 13


state 7
	decl : tDEFINE . decl_access func_type tIDENTIFIER func_params tAS blockStart  (8)
	decl_access : .  (16)

	tPUBLIC  shift 26
	tSMALL  reduce 16
	tHUGE  reduce 16
	tNEWS  reduce 16
	tFAKE  reduce 16
	tPROCEDURE  reduce 16

	decl_access  goto 27


state 8
	func_type : tPROCEDURE .  (18)

	.  reduce 18


state 9
	$accept : program . $end  (0)

	$end  accept


state 10
	decl_chain : decl .  (2)

	.  reduce 2


state 11
	program : decl_chain .  (1)
	decl_chain : decl_chain . decl  (3)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 1

	decl  goto 28
	type  goto 12
	small  goto 13
	huge  goto 14
	news  goto 15
	func_type  goto 16
	access  goto 17
	var_decl  goto 18


state 12
	var_decl : type . tIDENTIFIER initially  (10)
	func_type : type . tFUNCTION  (17)

	tIDENTIFIER  shift 29
	tFUNCTION  shift 30
	.  error


state 13
	type : small .  (26)

	.  reduce 26


state 14
	type : huge .  (27)

	.  reduce 27


state 15
	type : news .  (28)

	.  reduce 28


state 16
	decl : func_type . tIDENTIFIER uses  (7)

	tIDENTIFIER  shift 31
	.  error


state 17
	decl : access . func_type tIDENTIFIER uses  (6)
	var_decl : access . type tIDENTIFIER initially  (9)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 8
	.  error

	type  goto 32
	small  goto 13
	huge  goto 14
	news  goto 15
	func_type  goto 33


state 18
	decl : var_decl .  (5)

	.  reduce 5


state 19
	small_chain : tSMALL . small_chain  (31)

	tSMALL  shift 19
	tFAKE  shift 20
	.  error

	small_chain  goto 34


state 20
	small_chain : tFAKE .  (32)

	.  reduce 32


state 21
	small : tSMALL small_chain .  (30)

	.  reduce 30


state 22
	huge_chain : tHUGE . huge_chain  (35)

	tHUGE  shift 22
	tFAKE  shift 23
	.  error

	huge_chain  goto 35


state 23
	huge_chain : tFAKE .  (36)

	.  reduce 36


state 24
	huge : tHUGE huge_chain .  (34)

	.  reduce 34


state 25
	news : tFAKE news .  (37)

	.  reduce 37


state 26
	decl_access : tPUBLIC .  (15)

	.  reduce 15


state 27
	decl : tDEFINE decl_access . func_type tIDENTIFIER func_params tAS blockStart  (8)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 8
	.  error

	type  goto 36
	small  goto 13
	huge  goto 14
	news  goto 15
	func_type  goto 37


state 28
	decl_chain : decl_chain decl .  (3)

	.  reduce 3


29: shift/reduce conflict (shift 38, reduce 12) on tOPEN
state 29
	var_decl : type tIDENTIFIER . initially  (10)
	initially : .  (12)

	tOPEN  shift 38
	$end  reduce 12
	tINTEGER  reduce 12
	tDOUBLE  reduce 12
	tIDENTIFIER  reduce 12
	tSTRING  reduce 12
	tIF  reduce 12
	tSMALL  reduce 12
	tHUGE  reduce 12
	tNEWS  reduce 12
	tFAKE  reduce 12
	tNULL  reduce 12
	tUSE  reduce 12
	tPUBLIC  reduce 12
	tDEFINE  reduce 12
	tPROCEDURE  reduce 12
	tDO  reduce 12
	tRETURN  reduce 12
	tASSIGN  reduce 12
	tCELL  reduce 12
	tINPUT  reduce 12
	tSTOP  reduce 12
	tAGAIN  reduce 12
	tPOST  reduce 12
	tTWEET  reduce 12
	tSWEEPING  reduce 12
	tOUTSIDE  reduce 12
	tNOT  reduce 12
	tPLUS  reduce 12
	tMINUS  reduce 12

	initially  goto 39


state 30
	func_type : type tFUNCTION .  (17)

	.  reduce 17


state 31
	decl : func_type tIDENTIFIER . uses  (7)
	uses : .  (22)

	tUSES  shift 40
	$end  reduce 22
	tSMALL  reduce 22
	tHUGE  reduce 22
	tNEWS  reduce 22
	tFAKE  reduce 22
	tUSE  reduce 22
	tPUBLIC  reduce 22
	tDEFINE  reduce 22
	tPROCEDURE  reduce 22

	uses  goto 41


state 32
	var_decl : access type . tIDENTIFIER initially  (9)
	func_type : type . tFUNCTION  (17)

	tIDENTIFIER  shift 42
	tFUNCTION  shift 30
	.  error


state 33
	decl : access func_type . tIDENTIFIER uses  (6)

	tIDENTIFIER  shift 43
	.  error


state 34
	small_chain : tSMALL small_chain .  (31)

	.  reduce 31


state 35
	huge_chain : tHUGE huge_chain .  (35)

	.  reduce 35


state 36
	func_type : type . tFUNCTION  (17)

	tFUNCTION  shift 30
	.  error


state 37
	decl : tDEFINE decl_access func_type . tIDENTIFIER func_params tAS blockStart  (8)

	tIDENTIFIER  shift 44
	.  error


state 38
	initially : tOPEN . tINITIALLY expr tCLOSE  (11)

	tINITIALLY  shift 45
	.  error


state 39
	var_decl : type tIDENTIFIER initially .  (10)

	.  reduce 10


state 40
	uses : tUSES . params  (21)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	params  goto 46
	type  goto 47
	small  goto 13
	huge  goto 14
	news  goto 15
	variable  goto 48


state 41
	decl : func_type tIDENTIFIER uses .  (7)

	.  reduce 7


42: shift/reduce conflict (shift 38, reduce 12) on tOPEN
state 42
	var_decl : access type tIDENTIFIER . initially  (9)
	initially : .  (12)

	tOPEN  shift 38
	$end  reduce 12
	tINTEGER  reduce 12
	tDOUBLE  reduce 12
	tIDENTIFIER  reduce 12
	tSTRING  reduce 12
	tIF  reduce 12
	tSMALL  reduce 12
	tHUGE  reduce 12
	tNEWS  reduce 12
	tFAKE  reduce 12
	tNULL  reduce 12
	tUSE  reduce 12
	tPUBLIC  reduce 12
	tDEFINE  reduce 12
	tPROCEDURE  reduce 12
	tDO  reduce 12
	tRETURN  reduce 12
	tASSIGN  reduce 12
	tCELL  reduce 12
	tINPUT  reduce 12
	tSTOP  reduce 12
	tAGAIN  reduce 12
	tPOST  reduce 12
	tTWEET  reduce 12
	tSWEEPING  reduce 12
	tOUTSIDE  reduce 12
	tNOT  reduce 12
	tPLUS  reduce 12
	tMINUS  reduce 12

	initially  goto 49


state 43
	decl : access func_type tIDENTIFIER . uses  (6)
	uses : .  (22)

	tUSES  shift 40
	$end  reduce 22
	tSMALL  reduce 22
	tHUGE  reduce 22
	tNEWS  reduce 22
	tFAKE  reduce 22
	tUSE  reduce 22
	tPUBLIC  reduce 22
	tDEFINE  reduce 22
	tPROCEDURE  reduce 22

	uses  goto 50


state 44
	decl : tDEFINE decl_access func_type tIDENTIFIER . func_params tAS blockStart  (8)
	func_params : .  (20)

	tON  shift 51
	tAS  reduce 20

	func_params  goto 52


state 45
	initially : tOPEN tINITIALLY . expr tCLOSE  (11)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 65
	lval  goto 66
	str_chain  goto 67


state 46
	uses : tUSES params .  (21)
	params : params . tCOMMA variable  (24)

	tCOMMA  shift 68
	$end  reduce 21
	tSMALL  reduce 21
	tHUGE  reduce 21
	tNEWS  reduce 21
	tFAKE  reduce 21
	tUSE  reduce 21
	tPUBLIC  reduce 21
	tDEFINE  reduce 21
	tPROCEDURE  reduce 21


state 47
	variable : type . tIDENTIFIER  (25)

	tIDENTIFIER  shift 69
	.  error


state 48
	params : variable .  (23)

	.  reduce 23


state 49
	var_decl : access type tIDENTIFIER initially .  (9)

	.  reduce 9


state 50
	decl : access func_type tIDENTIFIER uses .  (6)

	.  reduce 6


state 51
	func_params : tON . params  (19)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	params  goto 70
	type  goto 47
	small  goto 13
	huge  goto 14
	news  goto 15
	variable  goto 48


state 52
	decl : tDEFINE decl_access func_type tIDENTIFIER func_params . tAS blockStart  (8)

	tAS  shift 71
	.  error


state 53
	expr : tINTEGER .  (71)

	.  reduce 71


state 54
	expr : tDOUBLE .  (72)

	.  reduce 72


state 55
	lval : tIDENTIFIER .  (68)

	.  reduce 68


state 56
	str_chain : tSTRING .  (94)

	.  reduce 94


state 57
	expr : tNULL .  (73)

	.  reduce 73


state 58
	expr : tUSE . expr_chain tFOR tIDENTIFIER  (89)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr_chain  goto 72
	expr  goto 73
	lval  goto 66
	str_chain  goto 67


state 59
	expr : tDO . tIDENTIFIER  (90)

	tIDENTIFIER  shift 74
	.  error


state 60
	lval : tCELL . expr tAT lval  (69)
	lval : tCELL . expr tAT tOPEN expr tCLOSE  (70)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 75
	lval  goto 66
	str_chain  goto 67


state 61
	expr : tOPEN . expr tCLOSE  (88)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 76
	lval  goto 66
	str_chain  goto 67


state 62
	expr : tNOT . expr  (85)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 77
	lval  goto 66
	str_chain  goto 67


state 63
	expr : tPLUS . expr  (86)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 78
	lval  goto 66
	str_chain  goto 67


state 64
	expr : tMINUS . expr  (87)

	tINTEGER  shift 53
	tDOUBLE  shift 54
	tIDENTIFIER  shift 55
	tSTRING  shift 56
	tNULL  shift 57
	tUSE  shift 58
	tDO  shift 59
	tCELL  shift 60
	tOPEN  shift 61
	tNOT  shift 62
	tPLUS  shift 63
	tMINUS  shift 64
	.  error

	expr  goto 79
	lval  goto 66
	str_chain  goto 67


state 65
	initially : tOPEN tINITIALLY expr . tCLOSE  (11)
	expr : expr . tBELOW expr  (75)
	expr : expr . tABOVE expr  (76)
	expr : expr . tEQUALS expr  (77)
	expr : expr . tAND expr  (78)
	expr : expr . tOR expr  (79)
	expr : expr . tTIMES expr  (80)
	expr : expr . tOVER expr  (81)
	expr : expr . tMODULUS expr  (82)
	expr : expr . tPLUS expr  (83)
	expr : expr . tMINUS expr  (84)
	expr : expr . tOBJECTS  (91)

	tOBJECTS  shift 80
	tCLOSE  shift 81
	tAND  shift 82
	tOR  shift 83
	tABOVE  shift 84
	tBELOW  shift 85
	tEQUALS  shift 86
	tPLUS  shift 87
	tMINUS  shift 88
	tTIMES  shift 89
	tOVER  shift 90
	tMODULUS  shift 91
	.  error


state 66
	expr : lval . tADDRESS  (92)
	expr : lval .  (93)

	tADDRESS  shift 92
	tINTEGER  reduce 93
	tDOUBLE  reduce 93
	tIDENTIFIER  reduce 93
	tSTRING  reduce 93
	tIF  reduce 93
	tTHEN  reduce 93
	tNULL  reduce 93
	tUSE  reduce 93
	tDO  reduce 93
	tFOR  reduce 93
	tRETURN  reduce 93
	tASSIGN  reduce 93
	tCELL  reduce 93
	tINPUT  reduce 93
	tOBJECTS  reduce 93
	tSTOP  reduce 93
	tAGAIN  reduce 93
	tPOST  reduce 93
	tTWEET  reduce 93
	tSWEEPING  reduce 93
	tBY  reduce 93
	tAT  reduce 93
	tTO  reduce 93
	tOUTSIDE  reduce 93
	tCOMMA  reduce 93
	tOPEN  reduce 93
	tCLOSE  reduce 93
	tNOT  reduce 93
	tAND  reduce 93
	tOR  reduce 93
	tABOVE  reduce 93
	tBELOW  reduce 93
	tEQUALS  reduce 93
	tPLUS  reduce 93
	tMINUS  reduce 93
	tTIMES  reduce 93
	tOVER  reduce 93
	tMODULUS  reduce 93


67: shift/reduce conflict (shift 93, reduce 74) on tSTRING
state 67
	expr : str_chain .  (74)
	str_chain : str_chain . tSTRING  (95)

	tSTRING  shift 93
	tINTEGER  reduce 74
	tDOUBLE  reduce 74
	tIDENTIFIER  reduce 74
	tIF  reduce 74
	tTHEN  reduce 74
	tNULL  reduce 74
	tUSE  reduce 74
	tDO  reduce 74
	tFOR  reduce 74
	tRETURN  reduce 74
	tASSIGN  reduce 74
	tCELL  reduce 74
	tINPUT  reduce 74
	tOBJECTS  reduce 74
	tSTOP  reduce 74
	tAGAIN  reduce 74
	tPOST  reduce 74
	tTWEET  reduce 74
	tSWEEPING  reduce 74
	tBY  reduce 74
	tAT  reduce 74
	tTO  reduce 74
	tOUTSIDE  reduce 74
	tCOMMA  reduce 74
	tOPEN  reduce 74
	tCLOSE  reduce 74
	tNOT  reduce 74
	tAND  reduce 74
	tOR  reduce 74
	tABOVE  reduce 74
	tBELOW  reduce 74
	tEQUALS  reduce 74
	tPLUS  reduce 74
	tMINUS  reduce 74
	tTIMES  reduce 74
	tOVER  reduce 74
	tMODULUS  reduce 74


state 68
	params : params tCOMMA . variable  (24)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	type  goto 47
	small  goto 13
	huge  goto 14
	news  goto 15
	variable  goto 94


state 69
	variable : type tIDENTIFIER .  (25)

	.  reduce 25


state 70
	func_params : tON params .  (19)
	params : params . tCOMMA variable  (24)

	tCOMMA  shift 68
	tAS  reduce 19

